force-app/main/default/objects/InvoiceLine__c/InvoiceLine__c.object-meta.xml
<CustomObject>
    <description>Ligne de facture basée sur la modélisation des factures du module Salesforce Billing</description>
    <label>Ligne de facture</label>
    <nameField>
        <displayFormat>LFAC/{YYYY}/{0000000}</displayFormat>
        <label>Numéro</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Lignes de facture</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>