force-app/main/default/objects/InvoiceLine__c/fields/asset__c.field-meta.xml
<CustomField>
    <fullName>asset__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Actif</label>
    <referenceTo>Asset</referenceTo>
    <relationshipLabel>Lignes de facture</relationshipLabel>
    <relationshipName>InvoiceLines</relationshipName>
    <type>Lookup</type>
</CustomField>