force-app/main/default/objects/InvoiceLine__c/fields/autoComputedAmount__c.field-meta.xml
<CustomField>
    <fullName>autoComputedAmount__c</fullName>
    <formula>invoice__r.autoComputedAmount__c</formula>
    <label>[#] Montant auto calculé</label>
    <type>Checkbox</type>
</CustomField>