force-app/main/default/objects/InvoiceLine__c/fields/controlResource__c.field-meta.xml
<CustomField>
    <fullName>controlResource__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Ressource de métrage</label>
    <referenceTo>ServiceResource</referenceTo>
    <relationshipLabel>Lignes de facture (Contrôle)</relationshipLabel>
    <relationshipName>ControlInvoiceLines</relationshipName>
    <type>Lookup</type>
</CustomField>