force-app/main/default/objects/InvoiceLine__c/fields/controlResourceCertification__c.field-meta.xml
<CustomField>
    <fullName>controlResourceCertification__c</fullName>
    <label>Ressource de métrage (Certificat)</label>
    <length>50</length>
    <type>Text</type>
</CustomField>