force-app/main/default/objects/InvoiceLine__c/fields/controlResourceName__c.field-meta.xml
<CustomField>
    <fullName>controlResourceName__c</fullName>
    <label>Ressource de métrage (Nom)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>