force-app/main/default/objects/InvoiceLine__c/fields/creditMemoAmount__c.field-meta.xml
<CustomField>
    <fullName>creditMemoAmount__c</fullName>
    <label>Montant des avoirs</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>