force-app/main/default/objects/InvoiceLine__c/fields/installResource__c.field-meta.xml
<CustomField>
    <fullName>installResource__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Ressource d&apos;installation</label>
    <referenceTo>ServiceResource</referenceTo>
    <relationshipLabel>Lignes de facture (Installation)</relationshipLabel>
    <relationshipName>InstallInvoiceLines</relationshipName>
    <type>Lookup</type>
</CustomField>