force-app/main/default/objects/InvoiceLine__c/fields/installResourceCertification__c.field-meta.xml
<CustomField>
    <fullName>installResourceCertification__c</fullName>
    <label>Ressource d&apos;installation (Certificat)</label>
    <length>50</length>
    <type>Text</type>
</CustomField>