force-app/main/default/objects/InvoiceLine__c/fields/installResourceName__c.field-meta.xml
<CustomField>
    <fullName>installResourceName__c</fullName>
    <label>Ressource d&apos;installation (Nom)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>