force-app/main/default/objects/InvoiceLine__c/fields/invalidVATAmount__c.field-meta.xml
<CustomField>
    <fullName>invalidVATAmount__c</fullName>
    <formula>VATAmount__c &gt; pretaxAmount__c || VATAmount__c &gt; amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>[#] TVA invalide</label>
    <type>Checkbox</type>
</CustomField>