force-app/main/default/objects/InvoiceLine__c/fields/invoice__c.field-meta.xml
<CustomField>
    <fullName>invoice__c</fullName>
    <label>Facture</label>
    <lookupFilter>
        <active>false</active>
        <filterItems>
            <field>$Source.isParentLine__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Invoice__c</referenceTo>
    <relationshipLabel>Lignes de facture</relationshipLabel>
    <relationshipName>InvoiceLines</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>