force-app/main/default/objects/InvoiceLine__c/fields/invoiceAmount__c.field-meta.xml
<CustomField>
    <fullName>invoiceAmount__c</fullName>
    <formula>invoice__r.amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>[#] Montant TTC de la facture</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>