force-app/main/default/objects/InvoiceLine__c/fields/invoicePercentOrderAmount__c.field-meta.xml
<CustomField>
    <fullName>invoicePercentOrderAmount__c</fullName>
    <description>Pourcentage du montant de la facture d&apos;acompte par rapport à au montant de la commande</description>
    <formula>invoice__r.percentOrderAmount__c</formula>
    <label>[#] Pourcentage montant commande</label>
    <precision>18</precision>
    <scale>15</scale>
    <type>Percent</type>
</CustomField>