force-app/main/default/objects/InvoiceLine__c/fields/invoiceRecordType__c.field-meta.xml
<CustomField>
    <fullName>invoiceRecordType__c</fullName>
    <formula>invoice__r.RecordType.DeveloperName</formula>
    <label>[#] Type de la facture</label>
    <type>Text</type>
</CustomField>