force-app/main/default/objects/InvoiceLine__c/fields/isBillable__c.field-meta.xml
<CustomField>
    <fullName>isBillable__c</fullName>
    <formula>ISPICKVAL(type__c, &apos;Produit&apos;) &amp;&amp; isParentLine__c</formula>
    <label>[#] Est facturable</label>
    <type>Checkbox</type>
</CustomField>