force-app/main/default/objects/InvoiceLine__c/fields/isInvoiceLocked__c.field-meta.xml
<CustomField>
    <fullName>isInvoiceLocked__c</fullName>
    <description>Interdire toute suppression de facture dès qu&apos;un numéro fiscal a été apposé sur la facture et ceci pendant une période de 10 ans (à partir de la date de publication)</description>
    <formula>invoice__r.isInvoiceLocked__c</formula>
    <label>[#] Facture verrouillée</label>
    <type>Checkbox</type>
</CustomField>