force-app/main/default/objects/InvoiceLine__c/fields/isOrderLocked__c.field-meta.xml
<CustomField>
    <fullName>isOrderLocked__c</fullName>
    <formula>invoice__r.customerOrder__r.isLocked__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>[#] Commande verrouillée</label>
    <type>Checkbox</type>
</CustomField>