force-app/main/default/objects/InvoiceLine__c/fields/isParentLine__c.field-meta.xml
<CustomField>
    <fullName>isParentLine__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Champ alimenté en fonction de parentLine__c et utilisé pour les rollups de l&apos;objet Facture.
Impossible d&apos;utiliser directement parentLine__c dans le filtre des rollups.</description>
    <label>[#] Est ligne parent</label>
    <type>Checkbox</type>
</CustomField>