force-app/main/default/objects/InvoiceLine__c/fields/lineNumber__c.field-meta.xml
<CustomField>
    <fullName>lineNumber__c</fullName>
    <label>Numéro de ligne</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>