force-app/main/default/objects/InvoiceLine__c/fields/listPrice__c.field-meta.xml
<CustomField>
    <fullName>listPrice__c</fullName>
    <label>Prix catalogue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>