force-app/main/default/objects/InvoiceLine__c/fields/orderItem__c.field-meta.xml
<CustomField>
    <fullName>orderItem__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Ligne de la commande client</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>OrderItem.orderRecordType__c</field>
            <operation>equals</operation>
            <value>CustomerOrder</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>OrderItem</referenceTo>
    <relationshipLabel>Lignes de facture</relationshipLabel>
    <relationshipName>InvoiceLines</relationshipName>
    <type>Lookup</type>
</CustomField>