force-app/main/default/objects/InvoiceLine__c/fields/orderItemQuantity__c.field-meta.xml
<CustomField>
    <fullName>orderItemQuantity__c</fullName>
    <formula>orderItem__r.Quantity</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>[#] Quantité de la ligne de commande</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>