force-app/main/default/objects/InvoiceLine__c/fields/parentLine__c.field-meta.xml
<CustomField>
    <fullName>parentLine__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Ligne de facture parent</label>
    <referenceTo>InvoiceLine__c</referenceTo>
    <relationshipLabel>Lignes de facture</relationshipLabel>
    <relationshipName>ParentInvoiceLines</relationshipName>
    <type>Lookup</type>
</CustomField>