force-app/main/default/objects/InvoiceLine__c/fields/priceReduction__c.field-meta.xml
<CustomField>
    <fullName>priceReduction__c</fullName>
    <label>Réduction de prix</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>