force-app/main/default/objects/InvoiceLine__c/fields/referenceDate__c.field-meta.xml
<CustomField>
    <fullName>referenceDate__c</fullName>
    <formula>invoice__r.invoiceDate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>[#] Date de référence</label>
    <type>Date</type>
</CustomField>