force-app/main/default/objects/InvoiceLine__c/fields/relatedLine__c.field-meta.xml
<CustomField>
    <fullName>relatedLine__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Ligne de facture associée</label>
    <referenceTo>InvoiceLine__c</referenceTo>
    <relationshipLabel>Lignes associées</relationshipLabel>
    <relationshipName>InvoiceLines</relationshipName>
    <type>Lookup</type>
</CustomField>