force-app/main/default/objects/InvoiceLine__c/fields/thermalCoefficients__c.field-meta.xml
<CustomField>
    <fullName>thermalCoefficients__c</fullName>
    <label>Coefficients thermiques</label>
    <length>255</length>
    <type>Text</type>
</CustomField>