force-app/main/default/objects/InvoiceLine__c/fields/type__c.field-meta.xml
<CustomField>
    <fullName>type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Produit</fullName>
                <default>true</default>
                <label>Produit</label>
            </value>
            <value>
                <fullName>Déplacement</fullName>
            </value>
            <value>
                <fullName>Main d&apos;oeuvre</fullName>
            </value>
            <value>
                <fullName>Prestation</fullName>
            </value>
            <value>
                <fullName>Remise</fullName>
            </value>
            <value>
                <fullName>Autre</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>