force-app/main/default/objects/InvoiceLine__c/fields/unit__c.field-meta.xml
<CustomField>
    <fullName>unit__c</fullName>
    <defaultValue>&quot;UNIT&quot;</defaultValue>
    <label>Unité</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>UnitType</valueSetName>
    </valueSet>
</CustomField>