force-app/main/default/objects/InvoiceLine__c/fields/unitPrice__c.field-meta.xml
<CustomField>
    <fullName>unitPrice__c</fullName>
    <label>Prix unitaire (HT)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>