force-app/main/default/objects/InvoiceLine__c/fields/VATEffectiveDate__c.field-meta.xml
<CustomField>
    <fullName>VATEffectiveDate__c</fullName>
    <description>The date used to calculate the invoice line’s VATAmount.</description>
    <label>Date TVA</label>
    <type>Date</type>
</CustomField>