force-app/main/default/objects/InvoiceLine__c/fields/VATRate__c.field-meta.xml
<CustomField>
    <fullName>VATRate__c</fullName>
    <label>Taux TVA</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>