force-app/main/default/objects/InvoiceLine__c/validationRules/VR_K3_InvoiceLine_AssetWorkSite.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_K3_InvoiceLine_AssetWorkSite</fullName>
    <active>true</active>
    <description>Le chantier de l&apos;actif doit être identique au chantier de la facture</description>
    <errorConditionFormula>$User.ByPassValidationRule__c = false &amp;&amp;
$Setup.rh2__PS_Settings__c.rh2__Run_Validation_Rule__c &amp;&amp;
invoice__r.isLegacy__c == false &amp;&amp;
NOT(ISBLANK( asset__c )) &amp;&amp;
asset__r.chantier__c != invoice__r.worksite__c</errorConditionFormula>
    <errorMessage>Le chantier de l&apos;actif doit être identique au chantier de la facture!</errorMessage>
</ValidationRule>