force-app/main/default/objects/InvoiceLine__c/validationRules/VR_K3_InvoiceLine_CantCreateorUpdate.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_K3_InvoiceLine_CantCreateorUpdate</fullName>
    <active>false</active>
    <description>Impossible de modifier ou de créer une ligne de facture si la facture a une date de référence</description>
    <errorConditionFormula>$Setup.rh2__PS_Settings__c.rh2__Run_Validation_Rule__c &amp;&amp;
NOT(ISBLANK(referenceDate__c))</errorConditionFormula>
    <errorMessage>Impossible de modifier ou de créer une ligne de facture si la facture a une date de référence.</errorMessage>
</ValidationRule>