force-app/main/default/objects/InvoiceLine__c/validationRules/VR_K3_InvoiceLine_CreditMemoAmount.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_K3_InvoiceLine_CreditMemoAmount</fullName>
    <active>true</active>
    <description>Le montant du rabais ne peut pas dépasser le montant initiale de la ligne de facture</description>
    <errorConditionFormula>$User.ByPassValidationRule__c = false &amp;&amp;
$Setup.rh2__PS_Settings__c.rh2__Run_Validation_Rule__c &amp;&amp;
pretaxAmount__c &lt; creditMemoAmount__c &amp;&amp;
invoice__r.isLegacy__c == false</errorConditionFormula>
    <errorMessage>Le montant du rabais ne peut pas dépasser le montant initiale de la ligne de facture.</errorMessage>
</ValidationRule>