force-app/main/default/objects/InvoiceLine__c/validationRules/VR_K3_InvoiceLine_LineNumberRequired.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_K3_InvoiceLine_LineNumberRequired</fullName>
    <active>true</active>
    <description>Le numéro de ligne est obligatoire sauf pour les lignes historiques</description>
    <errorConditionFormula>$User.ByPassValidationRule__c = false &amp;&amp;
$Setup.rh2__PS_Settings__c.rh2__Run_Validation_Rule__c &amp;&amp;
invoice__r.isLegacy__c == false &amp;&amp;
ISBLANK( lineNumber__c )</errorConditionFormula>
    <errorDisplayField>lineNumber__c</errorDisplayField>
    <errorMessage>Le numéro de ligne est obligatoire!</errorMessage>
</ValidationRule>