force-app/main/default/objects/InvoiceLine__c/validationRules/VR_K3_InvoiceLine_OrderIsLocked.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_K3_InvoiceLine_OrderIsLocked</fullName>
    <active>true</active>
    <description>Impossible de modifier/créer une ligne de facture si la commande client est verrouillée</description>
    <errorConditionFormula>$User.ByPassValidationRule__c = false &amp;&amp;
$Setup.rh2__PS_Settings__c.rh2__Run_Validation_Rule__c &amp;&amp;
isOrderLocked__c &amp;&amp;
invoice__r.isLegacy__c == false</errorConditionFormula>
    <errorMessage>Impossible de modifier/créer une ligne de facture si la commande client est verrouillée</errorMessage>
</ValidationRule>