force-app/main/default/objects/InvoiceLine__c/validationRules/VR_K3_InvoiceLine_OrderItemWorkSite.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_K3_InvoiceLine_OrderItemWorkSite</fullName>
    <active>true</active>
    <description>Le chantier de la ligne de commande doit être identique au chantier de la facture</description>
    <errorConditionFormula>$User.ByPassValidationRule__c = false &amp;&amp;
$Setup.rh2__PS_Settings__c.rh2__Run_Validation_Rule__c &amp;&amp;
NOT(ISNULL( orderItem__c )) &amp;&amp;
orderItem__r.Order.chantier__c != invoice__r.worksite__c &amp;&amp;
invoice__r.isLegacy__c == false</errorConditionFormula>
    <errorMessage>Le chantier de la ligne de commande doit être identique au chantier de la facture!</errorMessage>
</ValidationRule>