force-app/main/default/objects/InvoiceLine__c/validationRules/VR_K3_InvoiceLine_ParentSameInvoice.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_K3_InvoiceLine_ParentSameInvoice</fullName>
    <active>true</active>
    <description>La ligne doit appartenir à la même facture que la ligne parent</description>
    <errorConditionFormula>$User.ByPassValidationRule__c = false &amp;&amp;
$Setup.rh2__PS_Settings__c.rh2__Run_Validation_Rule__c &amp;&amp;
NOT( ISNULL( parentLine__c ) || ISBLANK(parentLine__c)) &amp;&amp;
parentLine__r.invoice__c != invoice__c &amp;&amp;
invoice__r.isLegacy__c == false</errorConditionFormula>
    <errorMessage>La ligne doit appartenir à la même facture que la ligne parent!</errorMessage>
</ValidationRule>