force-app/main/default/objects/InvoiceLine__c/validationRules/VR_K3_InvoiceLine_PriceReductionValid.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_K3_InvoiceLine_PriceReductionValid</fullName>
    <active>true</active>
    <description>La réduction doit être inférieure ou égale à 0 si un des autres champs du prix est alimenté</description>
    <errorConditionFormula>$User.ByPassValidationRule__c = false &amp;&amp;
$Setup.rh2__PS_Settings__c.rh2__Run_Validation_Rule__c &amp;&amp;
invoice__r.isLegacy__c == false &amp;&amp;
(
				NOT(ISBLANK(unitPrice__c  )) ||
				NOT(ISBLANK(VATAmount__c  )) ||
				NOT(ISBLANK(pretaxAmount__c  )) ||
				NOT(ISBLANK(amount__c  ))
) &amp;&amp; 
(
				ISBLANK(priceReduction__c) || 
				priceReduction__c &gt; 0
)</errorConditionFormula>
    <errorDisplayField>priceReduction__c</errorDisplayField>
    <errorMessage>La réduction doit être inférieure ou égale à 0!</errorMessage>
</ValidationRule>