force-app/main/default/objects/InvoiceLine__c/validationRules/VR_K3_InvoiceLine_ProductRequired.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_K3_InvoiceLine_ProductRequired</fullName>
    <active>true</active>
    <description>Le produit est obligatoire!</description>
    <errorConditionFormula>$User.ByPassValidationRule__c = false &amp;&amp;
$Setup.rh2__PS_Settings__c.rh2__Run_Validation_Rule__c &amp;&amp;
invoice__r.isLegacy__c == false &amp;&amp;
ISBLANK( product__c ) &amp;&amp;
ISPICKVAL(type__c, &quot;Produit&quot;)</errorConditionFormula>
    <errorDisplayField>product__c</errorDisplayField>
    <errorMessage>Le produit est obligatoire!</errorMessage>
</ValidationRule>