force-app/main/default/objects/InvoiceLine__c/validationRules/VR_K3_InvoiceLine_ProductSameOrderItem.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_K3_InvoiceLine_ProductSameOrderItem</fullName>
    <active>true</active>
    <description>Le produit de la ligne de facture doit être le même que celui de la ligne de commande référencée</description>
    <errorConditionFormula>$User.ByPassValidationRule__c = false &amp;&amp;
$Setup.rh2__PS_Settings__c.rh2__Run_Validation_Rule__c &amp;&amp;
NOT(ISBLANK( product__c )) &amp;&amp;
NOT(ISBLANK( orderItem__c )) &amp;&amp;
product__c != orderItem__r.Product2Id &amp;&amp;
invoice__r.isLegacy__c == false</errorConditionFormula>
    <errorDisplayField>product__c</errorDisplayField>
    <errorMessage>Le produit ne correspond pas celui de la ligne de commande!</errorMessage>
</ValidationRule>