force-app/main/default/objects/InvoiceLine__c/validationRules/VR_K3_InvoiceLine_Quantity.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_K3_InvoiceLine_Quantity</fullName>
    <active>true</active>
    <description>La quantité doit être supérieure à 0.</description>
    <errorConditionFormula>$User.ByPassValidationRule__c = false &amp;&amp;
$Setup.rh2__PS_Settings__c.rh2__Run_Validation_Rule__c &amp;&amp;
NOT( ISNULL( quantity__c )) &amp;&amp;
quantity__c &lt;= 0 &amp;&amp;
invoice__r.isLegacy__c == false</errorConditionFormula>
    <errorDisplayField>quantity__c</errorDisplayField>
    <errorMessage>La quantité doit être supérieure à 0!</errorMessage>
</ValidationRule>