force-app/main/default/objects/InvoiceLine__c/validationRules/VR_K3_InvoiceLine_VATAmountValid.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_K3_InvoiceLine_VATAmountValid</fullName>
    <active>true</active>
    <description>Le montant TVA doit être supérieur ou égal à 0 si un des autres champs du prix est alimenté (Seulement CPQ car devis Sales a des options à 0)</description>
    <errorConditionFormula>$User.ByPassValidationRule__c = false &amp;&amp;
$Setup.rh2__PS_Settings__c.rh2__Run_Validation_Rule__c &amp;&amp;
invoice__r.isLegacy__c == false &amp;&amp;
NOT(ISBLANK( invoice__r.customerOrder__r.SBQQ__Quote__c )) &amp;&amp;
isParentLine__c &amp;&amp;
(
				NOT(ISBLANK(priceReduction__c  )) ||
				NOT(ISBLANK(amount__c  )) ||
				NOT(ISBLANK(unitPrice__c  )) ||
				NOT(ISBLANK(pretaxAmount__c  ))
) &amp;&amp; (
				ISBLANK(VATAmount__c) || 
				VATAmount__c &lt; 0
)</errorConditionFormula>
    <errorDisplayField>VATAmount__c</errorDisplayField>
    <errorMessage>Le montant TVA doit être supérieur ou égal à 0!</errorMessage>
</ValidationRule>