force-app/main/default/objects/InvoiceLine__c/validationRules/VR_K3_InvoiceLine_VATRateGreat0.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_K3_InvoiceLine_VATRateGreat0</fullName>
    <active>true</active>
    <description>Le taux TVA doit être supérieur à 0.</description>
    <errorConditionFormula>$User.ByPassValidationRule__c = false &amp;&amp;
$Setup.rh2__PS_Settings__c.rh2__Run_Validation_Rule__c &amp;&amp;
NOT( ISNULL( VATRate__c )) &amp;&amp;
VATRate__c &lt;= 0 &amp;&amp;
invoice__r.isLegacy__c == false</errorConditionFormula>
    <errorDisplayField>VATRate__c</errorDisplayField>
    <errorMessage>Le taux TVA doit être supérieur à 0!</errorMessage>
</ValidationRule>