force-app/main/default/objects/InvoiceLine__c/validationRules/VR_K3_InvoiceLine_VATRateParent.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_K3_InvoiceLine_VATRateParent</fullName>
    <active>true</active>
    <description>Le taux de TVA est obligatoire pour les lignes parent</description>
    <errorConditionFormula>$User.ByPassValidationRule__c = false &amp;&amp;
$Setup.rh2__PS_Settings__c.rh2__Run_Validation_Rule__c &amp;&amp;
ISNULL( VATRate__c ) &amp;&amp;
ISBLANK( parentLine__c ) &amp;&amp;
invoice__r.isLegacy__c == false</errorConditionFormula>
    <errorDisplayField>VATRate__c</errorDisplayField>
    <errorMessage>Le taux de TVA est obligatoire pour les lignes parent!</errorMessage>
</ValidationRule>